# Goblin-Agent

./: README.md  main.py  pyproject.toml  render.yaml  requirements.txt
Goblin Agent/: README.md  langgraph.json  main.py  pyproject.toml  render.yaml  requirements.txt
Goblin Agent/src/Agents/: portfolio_manager_agent.py  technical_analysis_agent.py
Goblin Agent/src/tools/: finnhub_tool.py  utils.py
Goblin Agent/static/: script.js
src/Agents/: data_collection_agent.py  news_intelligence_agent.py
src/prompts/: prompts.py
src/tools/: technical_indicator_tool.py  yfinance_tool.py
src/workflows/: state.py  workflow.py
static/: index.html  style.css
